--- a/app/src/main/res/layout/grid_item.xml
+++ b/app/src/main/res/layout/grid_item.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    app:cardCornerRadius="6dp"
+    app:cardCornerRadius="8dp"
     >
 
     <LinearLayout
@@ -27,9 +27,9 @@
             android:layout_marginTop="1dp"
             android:textAlignment="center"
             android:textColor="@android:color/white"
-            android:textStyle="bold"
-            android:textSize="12dp"
-            tools:text="Iasi City Tour Guide" />
+            android:textStyle="italic"
+            android:textSize="14sp"
+            tools:text="@string/touristatraction_grid_item" />
 
         <TextView
             android:id="@+id/address"
@@ -38,15 +38,19 @@
             android:layout_below="@id/name"
             android:layout_marginTop="1dp"
             android:textAlignment="center"
+            android:textSize="9sp"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
             android:textColor="@android:color/white"
-            tools:text="Strada Tudor Vkadimirescu 700259" />
+            tools:text="@string/adress_grid_item"
+            />
 
 
         <TextView
             android:id="@+id/phone"
             android:layout_width="122dp"
             android:layout_height="wrap_content"
+            android:layout_below="@id/address"
+            android:layout_marginTop="10dp"
             android:autoLink="phone"
             android:gravity="bottom"
             android:textAppearance="?android:textAppearanceSmallInverse"
@@ -54,7 +58,7 @@
             android:textColor="@android:color/white"
             android:textColorLink="@android:color/white"
             android:textStyle="italic"
-            tools:text="0728765027" />
+            tools:text="@string/phonenumber_grid_item" />
     </LinearLayout>
 
 </android.support.v7.widget.CardView>
